tests/errors/NonBoolLess.java
class NonBoolLess
{
    public static void main(String[] a)
    {
		System.out.println(1 < false);
    }
}